Submission for Moeller WIP

--- a/HTML/directory.html
+++ b/HTML/directory.html
@@ -34,6 +34,7 @@
   <h1 align="center">Recent Posts</h1>
 	<h3>2021</h3>
   <ul class="projects">
+	  <li><a class="link2" href="../Moeller/index.html">[WIP] Moeller Home MGMT </a></li>
 	  <li><a class="link2" href="../Wantable Web Redesign/index.html">[Concept] Wantable Homepage Redesign </a></li>
 	  <li><a class="link2" href="../HTML/Wantable Redesign.html">[Concept] Wantable App Redesign </a></li>
 	  <li><a class="link2" href="../HTML/StylizedResume.html">[Resume] Stylized Resume </a></li>
