Update to Moeller

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -30,6 +30,7 @@
 </nav>
 <a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
+		<div id="hiddentop"></div>
 <div class="container">
   <div id="topprof"> <img src="../Images/IMG_4589.jpeg" id="profilepic">
     <div id="para">
