--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <link rel="stylesheet" type="text/css" href="./CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 <link rel="mask-icon" href="./Images/logo.svg" color="#000000">
-<script type="text/javascript" src="./Javascript/dark.js" defer></script>
 </head>
 <nav class="light-mode" id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
@@ -28,7 +27,7 @@
     <li id="main2"><a href="./HTML/music.html">Music</a></li>
     <li id="main3"><a href="./HTML/about.html">About</a></li>
     <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
-      <ul class="drop">
+      <ul id="menudrop" class="drop">
         <li><a href="#">Github</a></li>
         <li><a href="./HTML/music.html">Music</a></li>
         <li><a href="./HTML/about.html">About</a></li>
@@ -37,14 +36,11 @@
     </li>
   </ul>
 </nav>
-<a href="../index.html"><img src="./Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
-<body id="body" class="light-mode">
-<br>
-<br>
-<br>
+<a href="../index.html"><img src="./Images/logo.png" id="logopic" alt=""/></a>
+<body>
+	<div id="hiddentop"></div>
 <img src="./Images/mac1.png" id="profile" alt=""/>
-<h1 align="center">Welcome To<br>
-  RyanCoen.dev</h1>
+<h1 align="center">Welcome To<br>RyanCoen.dev</h1>
 <p class="light-mode" id="intro" align="center">A place for my projects, music, tutorials and all things that interest me. Everything you find here has been built from scratch, including this site. Check out my portfolio for the latest projects I'm working on.&nbsp; &nbsp; &nbsp; </p>
 <div id="footer">
   <div id="social" align="center"> 
