Begin Moeller Responsive homepage

--- a/Moeller/HTML/contact-us.html
+++ b/Moeller/HTML/contact-us.html
@@ -14,6 +14,10 @@
 <nav> <a href="../index.html"><img id="logo" src="../images/noTextLogo.png"></a>
   <div id="menuDiv">
     <ul id="menu">
+		<div class="dropdown">
+    <li class="dropbtn">Menu</li>
+    <div align="center" class="dropdown-content"> <a href="../HTML/our-story.html">Our Story</a> <a href="../HTML/our-services.html">Our Services</a> <a href="../HTML/testimonials.html">Testimonials</a> </div>
+  </div>
       <a href="../HTML/our-story.html">
       <li class="menuItem">Our Story</li>
       </a> <a href="../HTML/our-services.html">
