--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -12,6 +12,10 @@
 <nav> <a href="index.html"><img id="logo" src="images/noTextLogo.png"></a>
   <div id="menuDiv">
     <ul id="menu">
+		 <div class="dropdown">
+    <li class="dropbtn">Menu</li>
+    <div align="center" class="dropdown-content"> <a href="HTML/our-story.html">Our Story</a> <a href="HTML/our-services.html">Our Services</a> <a href="HTML/testimonials.html">Testimonials</a> </div>
+  </div>
       <a href="HTML/our-story.html">
       <li class="menuItem">Our Story</li>
       </a> <a href="HTML/our-services.html">
@@ -25,10 +29,8 @@
   </div>
 </nav>
 <div id="welcomeBanner" align="center">
- <h1 id="bannerTitle">Welcome, Home</h1>
+<img src="images/noTextLogoWhite.png"/>
 	<h3 id="brand">Moeller Home Management</h3>
-	<h3 id="tagLine">Your Home; <b>Upgraded</b></h3>
-	
 </div>
 <div class="slider">
   <div class="slide1"></div>
@@ -37,7 +39,7 @@
 </div>
 <div id="contactbanner">
   <div id="innerbanner">
-    <div class="caption"> We do
+    <div class="caption"> We do:
       <div class="text-box">
         <div>everything.</div>
         <div>design.</div>
@@ -51,22 +53,26 @@
         <div>maintenance.</div>
       </div>
     </div>
-    <button class="btn">Let's Talk</button>
+	  <div id="talkBtn">
+    <button class="btn">Let's Talk</button></div>
   </div>
 </div>
 	<div id="descContainer">
 		<h2 align="center">Home improvement without the hassle</h2>
 	<div id="innerDescContain">
 		<div class="savings">
-		<h3>Your time is valuable</h3><br><br><br><br><br>
+			<h1 class="badge">1</h1>
+		<h3>Your time is valuable</h3>
 			<p>We source, schedule and negotiate the best providers for your projects; No need to worry about wasting time or waiting for call backs.</p>
 		</div>
 		<div class="savings">
-		<h3>Make every dollar count</h3><br><br><br><br>
+			<h1 class="badge">2</h1>
+		<h3>Make every dollar count</h3>
 			<p>We ensure the job is done right, the first time, with no hidden costs. Our <b>Home Physical Analysis</b> proactively identifies concerns before they become expensive repairs.</p>
 		</div>
 		<div class="savings">
-		<h3>Give you Peace of Mind</h3><br><br><br><br>
+			<h1 class="badge">3</h1>
+		<h3>Give you Peace of Mind</h3>
 			<p>Home improvement can be stressful. We match you with providers you can trust and ensure your projects meet your budget.</p>
 		</div>
 		</div>
@@ -77,9 +83,9 @@
       <a href=""><h4>Services</h4></a>
       <ul>
 		  <a href=""><li>Cleaning</li></a>
-        <a href=""> <li>Construction</li></a>
-        <a href=""> <li>Design</li></a>
-        <a href=""> <li>Installation</li></a>
+        <a href=""><li>Construction</li></a>
+        <a href=""><li>Design</li></a>
+        <a href=""><li>Installation</li></a>
          <a href=""><li>Landscaping</li></a>
          <a href=""><li>Maintenance and Repair</li></a>
          <a href=""><li>Security</li></a>
