More Responsive Moeller changes

--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -28,11 +28,13 @@
     </ul>
   </div>
 </nav>
-<div id="welcomeBanner" align="center">
+	<div id="sliderCover">
+	<div id="welcomeBanner" align="center">
 <img src="images/noTextLogoWhite.png"/>
 	<h3 id="brand">Moeller Home Management</h3>
-</div>
+</div></div>
 <div class="slider">
+	
   <div class="slide1"></div>
   <div class="slide2"></div>
   <div class="slide3"></div>
