--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Moeller Home Managment | Milwaukee's premium home improvment service </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Moeller Home Managment | Milwaukee's Premium Home Improvement Service </title>
 <link rel="stylesheet" href="CSS/styles.css" media="screen">
 <link rel="stylesheet" href="CSS/home.css" media="screen">
 <link rel="preconnect" href="https://fonts.gstatic.com">
