--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -24,7 +24,7 @@
       </a> <a href="HTML/testimonials.html">
       <li class="menuItem">Testimonials</li>
       </a> <a href="HTML/contact-us.html">
-      <li id="contactBtn" class="btn">Contact Us</li>
+      <li id="contactBtn" class="btn">Contact</li>
       </a>
     </ul>
   </div>
@@ -57,7 +57,7 @@
         <div>maintenance.</div>
       </div>
     </div>
-	  <div id="talkBtn">
+	  <div class="talkBtn">
     <button class="btn">Let's Talk</button></div>
   </div>
 </div>
@@ -79,7 +79,10 @@
 		<h3>Give you Peace of Mind</h3>
 			<p>Home improvement can be stressful. We match you with providers you can trust and ensure your projects meet your budget.</p>
 		</div>
+		<div id="talkBtn">
+    <button class="btn">Let's TalK</button></div>
 		</div>
+		 
 	</div>
 <div id="footer">
   <div id="footerContainer">
@@ -113,7 +116,7 @@
     <h2>Connect With Us:</h2>
     <img src="images/fb.png"> <img src="images/ins.png"> </div>
   <img id="logo2" src="images/logo2.png">
-  <p style="color: white" align="center">© Moeller Home Management 2021 / Design by Ryan Coen </p>
+  <p style="color: white" align="center">© Moeller Home Management 2021</p>
 </div>
 </body>
 </html>
