--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <nav> <a href="index.html"><img id="logo" src="images/noTextLogo.png"></a>
+	<a href="index.html"><img id="smalllogo" src="images/smallLogo.png"></a>
   <div id="menuDiv">
     <ul id="menu">
 		 <div class="dropdown">
