--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width" initial-scale="1">
+<meta name="viewport" content="width=device-width" initial-scale="1">
 <title>Moeller Home Managment | Milwaukee's Premium Home Improvement Service </title>
 <link rel="stylesheet" href="CSS/styles.css" media="screen">
 <link rel="stylesheet" href="CSS/home.css" media="screen">
@@ -10,24 +10,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-	
-	
-	<div id="myNav" class="overlay">
-  <div class="overlay-content">
-    <a href="HTML/our-story.html">Our Story</a>
-    <a href="HTML/our-services.html">Our Services</a>
-    <a href="HTML/testimonials.html">Testimonials</a>
-    <button id="slideButton"><a href="HTML/contact-us.html">Contact</a></button>
+<div id="myNav" class="overlay">
+  <div class="overlay-content"> <a href="HTML/our-story.html">Our Story</a> <a href="HTML/our-services.html">Our Services</a> <a href="HTML/testimonials.html">Testimonials</a>
+    <button id="slideButton">
+    <a href="HTML/contact-us.html">Contact</a>
+    </button>
   </div>
 </div>
-	
-<nav> 
-	<div id="MenuButton" class="container" onclick="toggleNav();myFunction(this)">
-  <div class="bar1"></div>
-  <div class="bar2"></div>
-  <div class="bar3"></div>
-</div>
-	<a href="index.html"><img class="selected" id="logo" src="images/noTextLogo.png"></a>
+<nav>
+  <div id="MenuButton" class="container" onclick="toggleNav();myFunction(this)">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+  </div>
+  <a href="index.html"><img class="selected" id="logo" src="images/noTextLogo.png"></a>
   <div id="menuDiv">
     <ul id="menu">
       <a href="HTML/our-story.html">
@@ -42,18 +38,16 @@
     </ul>
   </div>
 </nav>
-	<div id="sliderCover">
-	<div id="welcomeBanner" align="center">
-<img src="images/noTextLogoWhite.png"/>
-	<h3 id="brand">Moeller Home Management</h3>
-</div></div>
+<div id="sliderCover">
+  <div id="welcomeBanner" align="center"> <img src="images/noTextLogoWhite.png"/>
+    <h3 id="brand">Moeller Home Management</h3>
+  </div>
+</div>
 <div class="slider">
-	
   <div class="slide1"></div>
   <div class="slide2"></div>
   <div class="slide3"></div>
 </div>
-	
 <div id="contactbanner">
   <div id="innerbanner">
     <div class="caption"> We do:
@@ -70,58 +64,79 @@
         <div>maintenance.</div>
       </div>
     </div>
-	  <div class="talkBtn">
-    <button class="btn">Let's Talk</button></div>
+    <div class="talkBtn">
+      <button class="btn">Let's Talk</button>
+    </div>
   </div>
 </div>
-	<div id="descContainer">
-		<h2 align="center">Home improvement without the hassle</h2>
-	<div id="innerDescContain">
-		<div class="savings">
-			<h1 class="badge">1</h1>
-		<h3>Your time is valuable</h3>
-			<p>We source, schedule and negotiate the best providers for your projects; No need to worry about wasting time or waiting for call backs.</p>
-		</div>
-		<div class="savings">
-			<h1 class="badge">2</h1>
-		<h3>Make every dollar count</h3>
-			<p>We ensure the job is done right, the first time, with no hidden costs. Our <b>Home Physical Analysis</b> proactively identifies concerns before they become expensive repairs.</p>
-		</div>
-		<div class="savings">
-			<h1 class="badge">3</h1>
-		<h3>Give you Peace of Mind</h3>
-			<p>Home improvement can be stressful. We match you with providers you can trust and ensure your projects meet your budget.</p>
-		</div>
-		<div id="talkBtn">
-    <button class="btn">Let's TalK</button></div>
-		</div>
-		 
-	</div>
+<div id="descContainer">
+  <h2 align="center">Home improvement without the hassle</h2>
+  <div id="innerDescContain">
+    <div class="savings">
+      <h1 class="badge"></h1>
+      <h3>Your time is valuable</h3>
+      <p>We source, schedule and negotiate the best providers for your projects; No need to worry about wasting time or waiting for call backs.</p>
+    </div>
+    <div class="savings">
+      <h1 class="badge"></h1>
+      <h3>Make every dollar count</h3>
+      <p>We ensure the job is done right, the first time, with no hidden costs. Our <b>Home Physical Analysis</b> proactively identifies concerns before they become expensive repairs.</p>
+    </div>
+    <div class="savings">
+      <h1 class="badge"></h1>
+      <h3>Give you Peace of Mind</h3>
+      <p>Home improvement can be stressful. We match you with providers you can trust and ensure your projects meet your budget.</p>
+    </div>
+    <div id="talkBtn">
+      <button class="btn">Let's TalK</button>
+    </div>
+  </div>
+</div>
+<div id="messageContainer"> <img id="messageIcon" src="images/message.png"> </div>
 <div id="footer">
   <div id="footerContainer">
-    <div class="footerCol">
-      <a href=""><h4>Services</h4></a>
+    <div class="footerCol"> <a href="">
+      <h4>Services</h4>
+      </a>
       <ul>
-		  <a href=""><li>Cleaning</li></a>
-        <a href=""><li>Construction</li></a>
-        <a href=""><li>Design</li></a>
-        <a href=""><li>Installation</li></a>
-         <a href=""><li>Landscaping</li></a>
-         <a href=""><li>Maintenance and Repair</li></a>
-         <a href=""><li>Security</li></a>
-         <a href=""><li>Tech</li></a>
+        <a href="">
+        <li>Cleaning</li>
+        </a> <a href="">
+        <li>Construction</li>
+        </a> <a href="">
+        <li>Design</li>
+        </a> <a href="">
+        <li>Installation</li>
+        </a> <a href="">
+        <li>Landscaping</li>
+        </a> <a href="">
+        <li>Maintenance and Repair</li>
+        </a> <a href="">
+        <li>Security</li>
+        </a> <a href="">
+        <li>Tech</li>
+        </a>
       </ul>
     </div>
-    <div class="footerCol">
-       <a href=""><h4>Our Company</h4></a>
+    <div class="footerCol"> <a href="">
+      <h4>Our Company</h4>
+      </a>
       <ul>
-        <a href=""> <li>Our Story</li></a>
-        <a href=""> <li>Community</li></a>
+        <a href="">
+        <li>Our Story</li>
+        </a> <a href="">
+        <li>Community</li>
+        </a>
       </ul>
-       <a href=""><h4>Questions?</h4></a>
+      <a href="">
+      <h4>Questions?</h4>
+      </a>
       <ul>
-         <a href=""><li>FAQ/How it works</li></a>
-         <a href=""><li>Contact Us</li></a>
+        <a href="">
+        <li>FAQ/How it works</li>
+        </a> <a href="">
+        <li>Contact Us</li>
+        </a>
       </ul>
     </div>
   </div>
@@ -132,13 +147,10 @@
   <p style="color: white" align="center">© Moeller Home Management 2021/Design by Ryan Coen</p>
 </div>
 </body>
-		<script>
+<script>
 function myFunction(x) {
   x.classList.toggle("change");
 }
-</script>
-	<script>
-
 var nav = false;		
 		
 function openNav() {
@@ -156,5 +168,4 @@ function toggleNav() {
     }		
 		
 </script>
-
 </html>
